# emon_Suite

./: .gitignore  API_REFERENCE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md
Analyse_python/: JupyterProcess.ipynb  ProcessCSVFiles.py  repairRainReadings.py
EmonShared/: EmonEEPROM.cpp  EmonEEPROM.h  EmonShared.cpp  EmonShared.h  crc16.h  parity.h
Emon_BeehiveMonitor/: Emon_BeehiveMonitor.ino
Emon_LogToJson/: Dockerfile  Emon_LogToJson  Emon_LogToJson.cpp  Emon_LogToJson.sh  Emon_LogToJson.vcxproj  GCC_Build.txt.sh  SensorDataArray.cpp  SensorDataArray.h  SensorReader.cpp  SensorReader.h  docker-compose.yml  rs232.c
Emon_SerialToMQTT/: EmonMQTTClient.h  Emon_SerialToMQTT  Emon_SerialToMQTT.cpp  Emon_SerialToMQTT.service  Emon_SerialToMQTT.sh  Emon_SerialToMQTT.vcxproj  GCC_Build.txt.sh  MQTTClient.cpp  PayloadFactory.cpp  PayloadFactory.h  rs232.c  rs232.h
Fazcorp_ADS1115_devboard/: Fazcorp_ADS1115_devboard.ino
LinuxInstall/: InstallationGuideFor RaspPi-Readme.txt
PantechWH2900/: PantechToInflux.Dockerfile  PantechWH2900_to_influx.py  readme.txt
PythonBindings/: emon_config.yml  (+6 more)
python/pyEmon/: pyproject.toml  setup.py
python/pyEmon/pyemonlib/: emon_filterReader.py  emon_influx.py  emon_mqtt.py  emon_pybindings.cpp  emon_settings.py  emon_settings_web.py  filterReadings.py
python/pyEmon/pyemonlib/Claude_Support Docs/: IMPLEMENTATION_COMPLETE.md  MQTT_SETTINGS_IMPLEMENTATION.md  README_SETTINGS_MANAGER.md
python/pyEmon/pyemonlib/web_static/: app.js
python/pyEmon/pyemonlib/web_templates/: index.html
python/pyEmon/tests/: test_pybind.py
(+275 files in other folders)
