[build-system]
requires = ["setuptools>=65.0", "pybind11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemonlib"
version = "0.1.0"
description = "Emon Python library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Me"}
]
dependencies = [
    "influxdb-client[ciso]",
    "paho-mqtt",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest==7.1.2",
    "cython",
    "numpy",
    "pytz"
]

[tool.setuptools]
packages = ["pyemonlib"]
ext-modules = [ {name = "pyemonlib.emonSuite", sources = ["pyemonlib/emon_pybindings.cpp"]} ]

